--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,11 @@ dependencies:
   path: ^1.8.0
   postgres: ^2.3.2
   postgresql2: ^1.0.0
+  dartz: ^0.10.0-nullsafety.2
   
 
 dev_dependencies:
   dotenv: ^3.0.0
   lints: ^1.0.1
+  mockito: ^5.0.10
+  test: ^1.17.9
