--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   postgres: ^2.3.2
   postgresql2: ^1.0.0
   dartz: ^0.10.0-nullsafety.2
-  
+  equatable: ^2.0.3
 
 dev_dependencies:
   dotenv: ^3.0.0
