- Implementando la clase abstracta Failure para el manejo de los errores. - Implementando la clase abstracta BusinessRepository.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,12 +3,7 @@
 # see https://github.com/dart-lang/pedantic#enabled-lints.
 include: package:lints/recommended.yaml
 
-
 # For lint rules and documentation, see http://dart-lang.github.io/linter/lints.
-# Uncomment to specify additional rules.
-# linter:
-#   rules:
-#     - camel_case_types
 
 linter:
   rules:
@@ -93,6 +88,6 @@ linter:
 
 analyzer:
   exclude:
-    - lib/src/data/grpc/google
-    - lib/src/data/grpc
+    - lib/data/grpc/google
+    - lib/data/grpc
     - "**/*.mocks.dart"
