--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   get_it: ^7.1.4
   grpc: ^3.0.0
+  nanoid: ^1.0.0
   path: ^1.8.0
   postgres_dao:
     path: ./packages/postgres_dao
