--- a/packages/postgres_dao/pubspec.yaml
+++ b/packages/postgres_dao/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   path: ^1.8.0
   postgres: ^2.3.2
+  nanoid: ^1.0.0
 
 dev_dependencies:
   # dart run build_runner build
