--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   path: ^1.8.0
   injectable: ^1.4.1
   postgres_dao:
-    path: ./packages/postgres_dao
+    path: packages/postgres_dao 
   dartz: ^0.10.0-nullsafety.2
   equatable: ^2.0.3
 
