--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   nanoid: ^1.0.0
   path: ^1.8.0
   injectable: ^1.4.1
+  shutdown: ^0.4.3
+  stack_trace: ^1.10.0
   postgres_dao:
     path: packages/postgres_dao 
   dartz: ^0.10.0-nullsafety.2
