- Improving the dockerimage. - Upgrading the grpc version. - Implementing corrections to the postgresql database abstract class implementation. - Implementing the datasource and repository for, AuthorizationToken, RefreshToken, BannedDevice, BannedUser, Device. - Implementing other corrections.

--- a/.dockerignore
+++ b/.dockerignore
@@ -28,3 +28,10 @@ README.md
 **/.editorconfig
 **/.aws
 **/dist
+/.dart_tool
+.DS_Store
+/protos
+Makefile
+CHANGELOG.md
+analysis_options.yaml
+/test
