--- a/packages/postgres_dao/pubspec.yaml
+++ b/packages/postgres_dao/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   path: ^1.8.0
   postgres: ^2.4.0
-  nanoid: ^1.0.0
+  uuid: ^3.0.4
 
 dev_dependencies:
   # dart run build_runner build
