--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   get_it: ^7.1.4
   grpc: ^3.0.2
-  nanoid: ^1.0.0
+  uuid: ^3.0.4
   path: ^1.8.0
   injectable: ^1.4.1
   shutdown: ^0.4.3
@@ -21,7 +21,7 @@ dependencies:
     path: packages/postgres_dao
   dartz: ^0.10.0-nullsafety.2
   equatable: ^2.0.3
-
+  dart_jsonwebtoken: ^2.3.2
   dio: ^4.0.0
 
 dev_dependencies:
