--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -130,3 +130,5 @@ jobs:
           DATABASE_PORT: 5432
           DATABASE_USERNAME: "postgres"
           DATABASE_PASSWORD: "postgres"
+          PORT: 8080
+          JWT_SECRET_KEY: "secretkey"
