--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   path: ^1.8.0
   injectable: ^1.4.1
   shutdown: ^0.4.3
+  mailer: ^5.0.2
   stack_trace: ^1.10.0
   postgres: ^2.4.0
   postgres_dao:
