--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,3 +36,13 @@ dev_dependencies:
   lints: ^1.0.1
   mockito: ^5.0.10
   test: ^1.17.9
+  import_sorter: ^4.6.0
+
+
+import_sorter:
+  emojis: true # Optional, defaults to false
+  comments: false # Optional, defaults to true
+  ignored_files: # Optional, defaults to []
+    - lib/protos/**
+    - "**/*.mocks.dart"
+    - "**/*.config.dart"
