--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,6 +53,10 @@ jobs:
       - name: Analyze project source
         run: dart analyze
 
+      # Organazing the imports
+      - name: Organazing imports
+        run: dart run import_sorter:main
+
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
