--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
   pgweb:
     container_name: pgweb
     restart: always
-    image: sosedoff/pgweb:0.11.9
+    image: docker.uclv.cu/sosedoff/pgweb:0.11.9
     ports: 
       - "8083:8081" 
     links: 
